--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -7,24 +5,24 @@ services:
       dockerfile: Dockerfile
     container_name: clutch-backend
     ports:
-      - "${PORT:-3000}:${PORT:-3000}"
+      - "${PORT:-3002}:3000"
     env_file:
       - .env
     environment:
       - NODE_ENV=${NODE_ENV:-production}
-      - PORT=${PORT:-3000}
-      - DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+      - PORT=3000
+      - DATABASE_URL=postgresql://${DB_USER:-clutch_user}:${DB_PASSWORD:-clutch_password}@${DB_HOST:-postgres}:5432/${DB_NAME:-clutch_db}
       - DB_HOST=${DB_HOST:-postgres}
-      - DB_PORT=${DB_PORT:-5432}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_NAME=${DB_NAME}
+      - DB_PORT=5432
+      - DB_USER=${DB_USER:-clutch_user}
+      - DB_PASSWORD=${DB_PASSWORD:-clutch_password}
+      - DB_NAME=${DB_NAME:-clutch_db}
       - DB_POOL_MIN=${DB_POOL_MIN:-2}
       - DB_POOL_MAX=${DB_POOL_MAX:-20}
-      - REDIS_URL=redis://:${REDIS_PASSWORD}@${REDIS_HOST}:${REDIS_PORT}
+      - REDIS_URL=redis://:${REDIS_PASSWORD:-clutch_redis_password}@${REDIS_HOST:-redis}:6379
       - REDIS_HOST=${REDIS_HOST:-redis}
-      - REDIS_PORT=${REDIS_PORT:-6379}
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-clutch_redis_password}
       - LOG_LEVEL=${LOG_LEVEL:-info}
       - CORS_ORIGIN=${CORS_ORIGIN:-*}
     depends_on:
@@ -42,11 +40,11 @@ services:
     env_file:
       - .env
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER:-clutch_user}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-clutch_password}
+      - POSTGRES_DB=${POSTGRES_DB:-clutch_db}
     ports:
-      - "${DB_PORT:-5432}:5432"
+      - "${DB_PORT:-5434}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -64,7 +62,7 @@ services:
     env_file:
       - .env
     ports:
-      - "${REDIS_PORT:-6379}:6379"
+      - "${REDIS_PORT:-6382}:6379"
     volumes:
       - redis_data:/data
     command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
